@@ -167,7 +167,7 @@ Multi-Arch: same
 Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
-Conflicts: libc6-loongson2f [mipsel], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
+Conflicts: libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.22), locales (<< 2.22), locales-all (<< 2.22), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -255,7 +255,7 @@ Multi-Arch: same
 Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
-Conflicts: libc6-loongson2f [mipsel], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
+Conflicts: libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.22), locales (<< 2.22), locales-all (<< 2.22), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -343,7 +343,7 @@ Multi-Arch: same
 Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
-Conflicts: libc6-loongson2f [mipsel], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
+Conflicts: libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.22), locales (<< 2.22), locales-all (<< 2.22), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -431,7 +431,7 @@ Multi-Arch: same
 Depends: ${shlibs:Depends}, ${libgcc:Depends}
 Suggests: glibc-doc, debconf | debconf-2.0, libc-l10n, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}, libc6-sparcv9b [sparc sparc64], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
-Conflicts: libc6-loongson2f [mipsel], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386], libc6-i686 [i386]
+Conflicts: libc6-loongson2f [mipsel]
 Breaks: nscd (<< 2.22), locales (<< 2.22), locales-all (<< 2.22), lsb-core (<= 3.2-27) [amd64 ppc64 sparc64], libx11-6 (<< 1.1.4-2) [hurd-i386], libpthread-stubs0 (<< 0.3-4) [hurd-i386], hurd (<< 1:0.5.git20140203-1), libtirpc1 (<< 0.2.3)
 Replaces: libc6-amd64 [amd64],
           libc6-i386 [i386],
@@ -872,4 +872,31 @@ Description: GNU C Library: Shared libraries (EV67 optimized)
  This set of libraries is optimized for the Alpha EV67. It only
  needs to be installed on Alpha EV67/68 and EV7 machines. If you install
  this on an older machine, it won't even be used.
+
+Package: libc0.1-i686
+Architecture: kfreebsd-i386
+Section: oldlibs
+Priority: extra
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: transitional dummy package
+ This package is a dummy transitional package. It can be safely removed.
+
+Package: libc0.3-i686
+Architecture: hurd-i386
+Section: oldlibs
+Priority: extra
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: transitional dummy package
+ This package is a dummy transitional package. It can be safely removed.
+
+Package: libc6-i686
+Architecture: i386
+Section: oldlibs
+Priority: extra
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: transitional dummy package
+ This package is a dummy transitional package. It can be safely removed.
 
