@@ -47,3 +47,30 @@ Description: GNU C Library: Shared libraries (EV67 optimized)
  needs to be installed on Alpha EV67/68 and EV7 machines. If you install
  this on an older machine, it won't even be used.
 
+Package: libc0.1-i686
+Architecture: kfreebsd-i386
+Section: oldlibs
+Priority: extra
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: transitional dummy package
+ This package is a dummy transitional package. It can be safely removed.
+
+Package: libc0.3-i686
+Architecture: hurd-i386
+Section: oldlibs
+Priority: extra
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: transitional dummy package
+ This package is a dummy transitional package. It can be safely removed.
+
+Package: libc6-i686
+Architecture: i386
+Section: oldlibs
+Priority: extra
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: transitional dummy package
+ This package is a dummy transitional package. It can be safely removed.
+
