@@ -1,12 +1,3 @@
-glibc (2.22-8) unstable; urgency=medium
-
-  Starting with version 2.22-8, the GNU libc on the i386, hurd-386 and
-  kfreebsd-i386 architectures are optimized for i686. The libc6-i686,
-  libc0.3-i686 and libc0.1-i686 packages are therefore not needed
-  anymore and can be removed safely.
-
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 31 May 2016 12:23:15 +0200
-
 glibc (2.21-2) unstable; urgency=medium
 
   Starting with version 2.21-1, the glibc requires a 3.2 or later Linux
