@@ -1,0 +1,2 @@
+# Transitional dummy package, should be removed after Stretch release
+DEB_ARCH_REGULAR_PACKAGES += libc6-i686
