@@ -4,6 +4,15 @@ glibc (2.22-11) UNRELEASED; urgency=medium
   * hurd-i386/tg-poll_errors_fixes.diff: Fix crash when calling poll or select
     on a fd which had never been allocated.  Closes: #826175.
 
+  [ Aurelien Jarno ]
+  * debian/control: re-add libc0.1-i686, libc0.3-i686, libc6-i686 as a
+    dummy package to ease the upgrades.  Closes: #825421, #826290.
+  * debian/sysdeps/i386.mk: add libc6-i686 dummy package.
+  * debian/sysdeps/hurd-i386.mk: add libc0.1-i686 dummy package.
+  * debian/sysdeps/kfreebsd-i386.mk: add libc0.3-i686 dummy package.
+  * debian/debhelper.in/libc.NEWS: drop the new about libc6-i686, libc0.1-i686
+    and libc0.3-i686 packages removal.
+
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 31 May 2016 23:50:57 +0200
 
 glibc (2.22-10) unstable; urgency=medium
